# StarNotes

./: .gitignore  README.md
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
.obsidian/plugins/pexels-banner/: data.json
Codes/manims/: pyproject.toml
Codes/manims/src/manims/: 1_Manim组件.py  __init__.py  main.py
人工智能/AI Agent/LangGraph/: LangGraph Node.md
人工智能/AI Agent/MCP/: FastMCP+LangChain-MCP-Adapters使用指南.md  MCP解决了什么问题.md
人工智能/扩散模型/Score视角/: 1. Energy-Based Models (EBMs).md  Langevin Dynamics.md
人工智能/扩散模型/数学基础/: 扩散模型数学基础：引言.md  扩散模型数学基础：微积分（一）.md  扩散模型数学基础：微积分（二）.md  扩散模型数学基础：随机过程（一）.md
人工智能/技术框架/HF-Datasets/resources/hf-dataset-demo/: pyproject.toml
人工智能/技术框架/HF-Datasets/resources/hf-dataset-demo/src/hf_dataset_demo/: __init__.py  demo_1.py  demo_2.py  demo_3.py  ds_builder.py
人工智能/技术框架/HF-Datasets/resources/hf-dataset-demo/src/hf_dataset_demo/data/json/: data.json
前端技术/Flex布局/: FlexBox Layout.md
前端技术/Flex布局/resources/Example-01/: index.html
前端技术/Tailwind CSS/: Tailwind CSS.md
后端技术/Spring/Spring Security/: README.md  Spring Security入门.md  Spring Security基础配置详细解释.md  Spring Security授权原理.md  Spring Security自动配置原理.md  Spring Security认证原理.md  Spring中的Filter组件.md
后端技术/Spring/Spring Security/resources/: .$图.drawio.dtmp  图.drawio
我的生活/《红楼梦》与三十岁的我/: 1. 碎碎念.md  2. 奸雄贾雨村与甄士隐的小悲剧.md
数学/凸优化/: Chapter 2 - Convex Set.md
数学/工具/: Tikz绘图工具.md
数学/随机过程/概率基础/: 1. 随机变量.md
随笔日记/: 2025-08-09.md
随笔日记/2025/8月/: 2025-08-09.md
