[project]
name = "manims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmeimin", email = "wangmeimin@cstor.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
]

[project.scripts]
manims = "manims:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
