[project]
name = "hf-dataset-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmeimin", email = "wangmeimin@cstor.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
]

[project.scripts]
hf-dataset-demo = "hf_dataset_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
